--- a/Navigation 2.1/Navigation/Base.lproj/Main.storyboard
+++ b/Navigation 2.1/Navigation/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VVa-ty-c3K">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -16,8 +16,80 @@
                     <view key="view" contentMode="scaleToFill" id="z6I-Co-0n3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B5d-Hv-J02" customClass="ProfileHeaderView" customModule="Navigation" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="88" width="414" height="220"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kOV-ac-HGl">
+                                        <rect key="frame" x="16" y="154" width="382" height="50"/>
+                                        <color key="backgroundColor" red="1" green="0.88420634499999995" blue="0.65228690330000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="90S-Bm-KyO"/>
+                                        </constraints>
+                                        <state key="normal" title="setStatusButton">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jHS-U4-Jlo">
+                                        <rect key="frame" x="142" y="98" width="256" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="UN6-BJ-Pr9"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="myCat" translatesAutoresizingMaskIntoConstraints="NO" id="jzR-qc-aXc">
+                                        <rect key="frame" x="16" y="16" width="110" height="110"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="110" id="ix0-qX-Z0g"/>
+                                            <constraint firstAttribute="width" constant="110" id="vIa-4f-COt"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fullNameLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="exo-V2-5kh">
+                                        <rect key="frame" x="142" y="27" width="124.5" height="22"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="statusLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lAT-RW-VEQ">
+                                        <rect key="frame" x="142" y="71" width="75" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="jHS-U4-Jlo" firstAttribute="top" secondItem="lAT-RW-VEQ" secondAttribute="bottom" constant="10" id="2yP-Yw-dYd"/>
+                                    <constraint firstAttribute="trailing" secondItem="jHS-U4-Jlo" secondAttribute="trailing" constant="16" id="6UM-vc-OMD"/>
+                                    <constraint firstItem="exo-V2-5kh" firstAttribute="top" secondItem="B5d-Hv-J02" secondAttribute="top" constant="27" id="8vC-mG-Obu"/>
+                                    <constraint firstItem="jzR-qc-aXc" firstAttribute="leading" secondItem="B5d-Hv-J02" secondAttribute="leading" constant="16" id="FJz-1i-6rU"/>
+                                    <constraint firstAttribute="trailing" secondItem="kOV-ac-HGl" secondAttribute="trailing" constant="16" id="JIW-yc-exH"/>
+                                    <constraint firstItem="kOV-ac-HGl" firstAttribute="leading" secondItem="B5d-Hv-J02" secondAttribute="leading" constant="16" id="L1q-ro-vpq"/>
+                                    <constraint firstAttribute="bottom" secondItem="kOV-ac-HGl" secondAttribute="bottom" constant="16" id="Uym-LT-l3y"/>
+                                    <constraint firstItem="lAT-RW-VEQ" firstAttribute="leading" secondItem="exo-V2-5kh" secondAttribute="leading" id="VAd-i5-yes"/>
+                                    <constraint firstItem="kOV-ac-HGl" firstAttribute="top" secondItem="jHS-U4-Jlo" secondAttribute="bottom" constant="16" id="WvP-Aq-0D2"/>
+                                    <constraint firstItem="jHS-U4-Jlo" firstAttribute="leading" secondItem="jzR-qc-aXc" secondAttribute="trailing" constant="16" id="gSC-a1-Bul"/>
+                                    <constraint firstItem="jzR-qc-aXc" firstAttribute="top" secondItem="B5d-Hv-J02" secondAttribute="top" constant="16" id="huL-0w-khq"/>
+                                    <constraint firstAttribute="height" constant="220" id="jaR-kT-kWw"/>
+                                    <constraint firstItem="exo-V2-5kh" firstAttribute="leading" secondItem="jzR-qc-aXc" secondAttribute="trailing" constant="16" id="ton-s3-h6Z"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="avatarImageView" destination="jzR-qc-aXc" id="GFM-LZ-egu"/>
+                                    <outlet property="fullNameLabel" destination="exo-V2-5kh" id="qYb-Jp-EVn"/>
+                                    <outlet property="setStatusButton" destination="kOV-ac-HGl" id="WZV-YK-E99"/>
+                                    <outlet property="statusLabel" destination="lAT-RW-VEQ" id="0OI-XW-zHe"/>
+                                    <outlet property="statusTextField" destination="jHS-U4-Jlo" id="acY-8P-ode"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="FCL-IZ-fe8"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
+                        <constraints>
+                            <constraint firstItem="FCL-IZ-fe8" firstAttribute="trailing" secondItem="B5d-Hv-J02" secondAttribute="trailing" id="0cN-j0-IyN"/>
+                            <constraint firstItem="B5d-Hv-J02" firstAttribute="top" secondItem="FCL-IZ-fe8" secondAttribute="top" id="21Q-og-KCg"/>
+                            <constraint firstItem="B5d-Hv-J02" firstAttribute="leading" secondItem="FCL-IZ-fe8" secondAttribute="leading" id="tig-lo-rUm"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" id="TPi-FS-zh0"/>
                 </viewController>
@@ -50,19 +122,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9ru-89-vrk">
-                                <rect key="frame" x="171" y="433" width="72" height="30"/>
-                                <state key="normal" title="Open post"/>
-                                <connections>
-                                    <segue destination="Gpo-I4-SnC" kind="show" identifier="post" id="2l2-zd-PhO"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="734-kA-RdF">
+                                <rect key="frame" x="156.5" y="413" width="101" height="70"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wuf-0w-xbW">
+                                        <rect key="frame" x="0.0" y="0.0" width="101" height="30"/>
+                                        <state key="normal" title="Open post one"/>
+                                        <connections>
+                                            <segue destination="Gpo-I4-SnC" kind="show" identifier="post" id="QVy-hR-ryH"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S2A-ib-T7N">
+                                        <rect key="frame" x="0.0" y="40" width="101" height="30"/>
+                                        <state key="normal" title="Open post two"/>
+                                        <connections>
+                                            <segue destination="Gpo-I4-SnC" kind="show" identifier="post" id="TpB-Ww-wCp"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="rDk-lR-Mb7"/>
                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                         <constraints>
-                            <constraint firstItem="9ru-89-vrk" firstAttribute="centerX" secondItem="hnQ-fB-PJI" secondAttribute="centerX" id="ojZ-LA-9mf"/>
-                            <constraint firstItem="9ru-89-vrk" firstAttribute="centerY" secondItem="hnQ-fB-PJI" secondAttribute="centerY" id="z24-rS-igo"/>
+                            <constraint firstItem="734-kA-RdF" firstAttribute="centerX" secondItem="hnQ-fB-PJI" secondAttribute="centerX" id="ZAk-fr-sQg"/>
+                            <constraint firstItem="734-kA-RdF" firstAttribute="centerY" secondItem="hnQ-fB-PJI" secondAttribute="centerY" id="gGx-Ul-DDI"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Feed" id="CTA-33-ygc"/>
@@ -102,7 +186,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7My-cB-a4g">
-                                <rect key="frame" x="170.66666666666666" y="406" width="73" height="30"/>
+                                <rect key="frame" x="170.5" y="406" width="73" height="30"/>
                                 <state key="normal" title="Show alert"/>
                                 <connections>
                                     <action selector="showAlert:" destination="A8n-Iq-F5E" eventType="touchUpInside" id="YPe-Ts-Bhu"/>
@@ -159,8 +243,12 @@
             <point key="canvasLocation" x="-142.02898550724638" y="196.875"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="TpB-Ww-wCp"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="house.fill" catalog="system" width="128" height="106"/>
+        <image name="myCat" width="150" height="112.5"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
